syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bptopenware.messages.grpc";
option java_outer_classname = "RouteGuideProto";
option objc_class_prefix = "RTG";

package routeguide;


message I18Next {
	
	int64 resID = 1;

	string sysid = 2;
	
	string appid = 3;
	
	string compid = 4;
	
	string language = 5;
	
	string namespace = 6;
	
	string resource = 7;
	
	int32 modID = 8;
	
	string creTS = 9;
	
	string revTS = 10;
}

message AddUpdateResponse {
	bool success = 1;

	string editMessage = 2;

	int64 resID = 3;
}

service I18NextAPI {

	rpc getMessages(I18Next) returns (I18Next) {}

	rpc addMessages(I18Next) returns (AddUpdateResponse) {}

	rpc removeMessages(I18Next) returns (AddUpdateResponse) {}

	rpc updateMessages(I18Next) returns (AddUpdateResponse) {}
	
}